vlib/v/checker/tests/import_mod_as_import_duplicate_err.vv
import x.json2 as json
import json

numbers := {
	'one':   1
	'two':   2
	'three': 3
	'four':  4
}

out := json.encode(numbers)
println(out)
